# bci-project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/emotiv/cleaned/: 1-1-28.05.26.13.50.51_bciciv2b.edf  lewy1_bciciv2b.edf  lewy2_bciciv2b.edf  prawy1_bciciv2b.edf  prawy2_bciciv2b.edf
data/emotiv/raw/: 1-1-28.05.26.13.50.51.edf  1-1-28.05.26.13.50.51.md.csv  1-1-28.05.26.13.50.51.md.edf  lewy1.edf  lewy1.md.edf  lewy2.csv  lewy2.md.edf  prawy1.edf  prawy2.csv
emotiv/: lewy1.csv  lewy2.edf  prawy1.csv  prawy1.md.edf  prawy2.edf  prawy2.md.edf
results/exports/: epoch_metadata.csv  grand_summary.csv  snr_per_subject.csv  stationarity_adf.csv  summary_stats.csv  trial_variability.csv
src/: __init__.py  paths.py  preprocessing.py  train_deep.py  train_deep_cnn.py  train_eeg_conformer.py  train_ml_baselines.py  train_riemann.py  train_shallow.py
src/models/: train_deep.py  train_ml_baselines.py  train_riemann.py  train_shallow.py
src/models/supervised/: __init__.py  train_eeg_conformer.py
src/models/unsupervised/: base.py  factory.py  run.py  visualize.py
src/models/unsupervised/model_pipelines/: gmm.py  hmm.py
src/preprocessing/: __init__.py  convert.py
src/preprocessing/supervised/: preprocessing.py
src/preprocessing/unsupervised/: constants.py  filter.py  load.py
src/preprocessing/unsupervised/extract/: base.py  factory.py
src/preprocessing/unsupervised/extract/extractors/: ica_extractor.py  psd_extractor.py
