[project]
name = "bci-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lightgbm>=4.6.0",
    "mne>=1.12.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyriemann>=0.11",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
]
