[project]
name = "bci-project"
version = "0.1.0"
description = "Brain-Computer Interface project using EEG signals with deep learning models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edfio>=0.4.13",
    "lightgbm>=4.6.0",
    "mne>=1.12.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyriemann>=0.11",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "tqdm>=4.66.0",
]

[project.scripts]
bci-convert = "src.preprocessing.convert:main"
bci-train-deep = "src.models.train_deep:main"
bci-train-shallow = "src.models.train_shallow:main"
bci-train-riemann = "src.models.train_riemann:main"
bci-train-ml = "src.models.train_ml_baselines:main"
bci-train-conformer = "src.models.train_eeg_conformer:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
